--- a/index.html
+++ b/index.html
@@ -185,8 +185,10 @@
                     </div>
                 </div>
             </main>
-            <footer class="footer-container">
-                <div class="container footer-container__content">
+        </div>
+        <footer class="footer-container">
+            <div class="container footer-container__content">
+                <div class="footer footer-container__section">
                     <div class="footer-container__col">
                         <div class="logo">
                             <a href="/" class="logo__link">
@@ -230,8 +232,8 @@
                         </address>
                     </div>
                 </div>
-            </footer>
-        </div>
+            </div>
+        </footer>
     </div>
     
 </body>
