--- a/services.html
+++ b/services.html
@@ -10,75 +10,77 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./air_asia/css/normalize.css">
     <link rel="stylesheet" href="./air_asia/css/services.css">
-    <link rel="stylesheet" href="./air_asia/css/addition.css">
 </head>
 <body>
     <div class="wrapper">
-        <div class="header">
-            <header class="container">
-                <header class="header__top-menu">
-                    <div class="logo">
-                        <a href="/" class="logo__link">
-                            <img src="./air_asia/img/logo.png" alt="Logo Icon" class="logo__img">
-                        </a>
+        <section class="top-line">
+            <div class="container top-line__container">
+                <header class="header">
+                    <div class="header__col">
+                        <div class="logo">
+                            <a href="/" class="logo__link">
+                                <img src="./air_asia/img/logo.png" alt="Logo Icon" class="logo__img">
+                            </a>
+                        </div>
+                        <nav class="menu">
+                            <ul class="menu__list">
+                                <li class="menu__item menu__item--active"><a href="#" class="menu__link">Главная</a>
+                                </li>
+                                <li class="menu__item"><a href="#" class="menu__link">Услуги</a>
+                                </li>
+                                <li class="menu__item"><a href="#" class="menu__link">Отзывы</a>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
-                    <nav class="menu">
-                        <ul class="menu__list">
-                            <li class="menu__item menu__item--active"><a href="#" class="menu__link">Главная</a>
-                            </li>
-                            <li class="menu__item"><a href="#" class="menu__link">Услуги</a>
-                            </li>
-                            <li class="menu__item"><a href="#" class="menu__link">Отзывы</a>
-                            </li>
-    
-                        </ul>
-                    </nav>
-                    <address class="contacts">
-                        <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
-                        <div class="contacts__schedule">График работы</div>
-                    </address>
-                    <div class="header__title">
-                        <h1>Услуги</h1>
+                    <div class="header__col header__col--align--right">
+                        <address class="contacts">
+                            <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
+                            <div class="contacts__schedule">График работы</div>
+                        </address>
                     </div>
-                    <nav class="breadcrumb">
-                        <ul class="breadcrumb__list">
-                            <li class="breadcrumb__item"><a href="#" class="breadcrumb__item-link">Главная </a></li>
-                            <li class="breadcrumb__item"><a href="#" class="breadcrumb__item-link">Услуги </a></li>
-                        </ul>
-                    </nav>
                 </header>
-            </header>
-        </div>
-        <div class="hero">
-            <div class="container">
-                <div class="hero__properties">
-                    <ul class="hero__list">
-                        <li class="hero__item">
-                            <div class="hero__img">
-                                <img src="./air_asia/img_services/waterfall.png" alt="waterfall" class="hero__img-waterfall">
-                            </div>
-                            <div class="hero__content">
-                                <h3 class="hero__subtitle">Водопад Янг-бей</h3>
-                                <div class="hero__text">
-                                    <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.</p>
-                                </div>
-                                <button class="preview__button button">Подробнее</button>
-                            </div>
-                        </li>
-                        <li class="hero__item">
-                            <div class="hero__img">
-                                <img src="./air_asia/img_services/monkeys.png" alt="monkeys" class="hero__img-monkeys">
-                            </div>
-                            <div class="hero__content">
-                                <h3 class="hero__subtitle">Остров обезьян</h3>
-                                <div class="hero__text">
-                                    <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.</p>
-                                </div>
-                                <button class="preview__button button">Подробнее</button>
-                            </div>
-                        </li>
+                <h1 class="page__title">Услуги</h1>
+                <nav class="breadcrumb">
+                    <ul class="breadcrumbs__list">
+                        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__item-link">Главная</a></li>
+                        <li class="breadcrumbs__item breadcrumbs__item--active"><a href="#" class="breadcrumbs__item-link">Услуги</a></li>
                     </ul>
-                </div>
+                </nav>
+            </div>
+        </section>
+        <main class="page-content">
+            <div class="container">
+                <ul class="services">
+                    <li class="services__item">
+                        <a href="#" class="service">
+                            <div class="service__img">
+                                <img src="./air_asia/img_services/waterfall.png" alt="waterfall" class="service__img-waterfall">
+                            </div>
+                            <div class="service__content">
+                                <h2 class="service__title">Водопад Янг-бей</h2>
+                                <div class="service__desc">
+                                    <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.</p>
+                                </div>
+                                <button class="preview__button button button--color">Подробнее</button>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="services__item">
+                        <a href="" class="service">
+                            <div class="service__img">
+                                <img src="./air_asia/img_services/monkeys.png" alt="monkeys" class="service__img-monkeys">
+                            </div>
+                            <div class="service__content">
+                                <h3 class="service__title">Остров обезьян</h3>
+                                <div class="service__desc">
+                                    <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.</p>
+                                </div>
+                                <button class="preview__button button button--color">Подробнее</button>
+                            </div>
+                        </a>
+                    </li>
+                </ul> 
             </div>
             <div class="paginator">
                 <div class="paginator__display">Страница <span class="paginator__display-current">1 </span>из <span class="paginator__dispaly-all">7</span></div>
@@ -92,85 +94,84 @@
                     <li class="paginator__item"><a href="#" class="paginator__link">7</a></li>
                 </ul>
             </div>
-        </div>
-        <div class="partners">
+        </main>
+        <section class="partners partners--bg--grey">
             <div class="container">
+                <h2 class="partners__title">Партнеры</h2>
                 <ul class="partners__list">
                     <li class="partners__item">
-                        <a href="#" class="partners__link"></a>
-                        <img src="" alt="" class="partners__icon">
+                        <a href="#" class="partners__link"><img src="./air_asia/img_services/pobeda.png" alt="pobeda" class="partners__icon"></a>
                     </li>
                     <li class="partners__item">
-                        <a href="#" class="partners__link"></a>
-                        <img src="" alt="" class="partners__icon">
+                        <a href="#" class="partners__link"><img src="./air_asia/img_services/s7.png" alt="s7" class="partners__icon"></a>
                     </li>
                     <li class="partners__item">
-                        <a href="#" class="partners__link"></a>
-                        <img src="" alt="" class="partners__icon">
+                        <a href="#" class="partners__link"><img src="./air_asia/img_services/lets-fly.png" alt="lets-fly" class="partners__icon"></a>
                     </li>
                     <li class="partners__item">
-                        <a href="#" class="partners__link"></a>
-                        <img src="" alt="" class="partners__icon">
+                        <a href="#" class="partners__link"><img src="./air_asia/img_services/lufthansa.png" alt="lufthansa" class="partners__icon"></a>
                     </li>
                     <li class="partners__item">
-                        <a href="#" class="partners__link"></a>
-                        <img src="" alt="" class="partners__icon">
+                        <a href="#" class="partners__link"><img src="./air_asia/img_services/airbaltic.png" alt="airbaltic" class="partners__icon"></a>
                     </li>
                     <li class="partners__item">
-                        <a href="#" class="partners__link"></a>
-                        <img src="" alt="" class="partners__icon">
+                        <a href="#" class="partners__link"><img src="./air_asia/img_services/pegasus.png" alt="pegasus" class="partners__icon"></a>
                     </li>
                     <li class="partners__item">
-                        <a href="#" class="partners__link"></a>
-                        <img src="" alt="" class="partners__icon">
+                        <a href="#" class="partners__link"><img src="./air_asia/img_services/ural.png" alt="ural" class="partners__icon"></a>
                     </li>
                     <li class="partners__item">
-                        <a href="#" class="partners__link"></a>
-                        <img src="" alt="" class="partners__icon">
+                        <a href="#" class="partners__link"><img src="./air_asia/img_services/pegas.png" alt="pegas" class="partners__icon"></a>
                     </li>
                 </ul>
             </div>
-        </div>
+        </section>
         <footer class="footer-container">
             <div class="container footer-container__content">
-                <div class="logo">
-                    <a href="/" class="logo__link">
-                        <img src="./air_asia/img/logo.png" alt="Logo Icon" class="logo__img">
-                    </a>
+                <div class="footer">
+                    <div class="footer-container__col">
+                        <div class="logo">
+                            <a href="/" class="logo__link">
+                                <img src="./air_asia/img/logo.png" alt="Logo Icon" class="logo__img">
+                            </a>
+                        </div>
+                        <nav class="menu">
+                            <ul class="menu__list">
+                                <li class="menu__item">
+                                    <a href="" class="menu__link">Главная</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="" class="menu__link">Услуги</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="" class="menu__link">Отзывы</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="footer-container__col--align--right">
+                        <div class="socials">
+                            <ul class="socials__list">
+                                <li class="socials__item socials__item--icon--telegram">
+                                    <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
+                                </li>
+                                <li class="socials__item socials__item--icon--vk">
+                                    <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
+                                </li>
+                                <li class="socials__item socials__item--icon--fb">
+                                    <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
+                                </li>
+                                <li class="socials__item socials__item--icon--insta">
+                                    <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <address class="contacts contacts--footer">
+                            <div class="contacts__text">Бесплатный звонок по России</div>
+                            <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
+                        </address>
+                    </div>
                 </div>
-                <nav class="menu">
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Главная</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Услуги</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Отзывы</a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="socials">
-                    <ul class="socials__list">
-                        <li class="socials__item socials__item--icon--telegram">
-                            <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
-                        </li>
-                        <li class="socials__item socials__item--icon--vk">
-                            <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
-                        </li>
-                        <li class="socials__item socials__item--icon--fb">
-                            <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
-                        </li>
-                        <li class="socials__item socials__item--icon--insta">
-                            <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
-                        </li>
-                    </ul>
-                </div>
-                <address class="contacts contacts--footer">
-                    <div class="contacts__text">Бесплатный звонок по России</div>
-                    <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
-                </address>
             </div>
         </footer>
     </div>
