--- a/reviews.html
+++ b/reviews.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./air_asia/css/normalize.css">
     <link rel="stylesheet" href="./air_asia/css/services.css">
+    <link rel="stylesheet" href="./air_asia/css/reviews.css">
 </head>
 <body>
     <div class="wrapper">
@@ -40,11 +41,11 @@
                         </address>
                     </div>
                 </header>
-                <h1 class="page-title">Отзывы</h1>
+                <h1 class="page-title page-title--rev">Отзывы</h1>
                 <nav class="breadcrumb">
                     <ul class="breadcrumbs__list">
-                        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__item-link">Главная</a></li>
-                        <li class="breadcrumbs__item breadcrumbs__item--active"><a href="#" class="breadcrumbs__item-link">Услуги</a></li>
+                        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__item-link">Главная&nbsp;</a></li>
+                        <li class="breadcrumbs__item breadcrumbs__item--active"><a href="#" class="breadcrumbs__item-link">&nbsp;Услуги</a></li>
                     </ul>
                 </nav>
             </div>
@@ -59,11 +60,12 @@
                                     <img src="./air_asia/img_reviews/Ivan.png" alt="user" class="avar__img">
                                 </div>
                             </div>
-                            <div class="review__userdata"></div>
-                            <a href="#" class="review__user">Иван Петрович</a>
-                            <ul class="review__tags">
-                                <li class="review__tag-item tag">Водопад Янг-бей</li>
-                            </ul>
+                            <div class="review__userdata">
+                                <a href="#" class="review__user">Иван Петрович</a>
+                                <ul class="review__tags">
+                                    <li class="review__tag-item tag tag--bg--green">Водопад Янг-бей</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="review__content">
                             <h3 class="review__title">Крутой поход на водопады</h3>
@@ -79,37 +81,15 @@
                         <div class="review__header">
                             <div class="review__photo">
                                 <div class="avatar">
-                                    <img src="./air_asia/img_reviews/Ekaterina.png" alt="user" class="avar__img">
-                                </div>
-                            </div>
-                            <div class="review__userdata"></div>
-                            <a href="#" class="review__user">Екатерина Жмых</a>
-                            <ul class="review__tags">
-                                <li class="review__tag-item tag">Тур на Остров обезьян</li>
-                            </ul>
-                        </div>
-                        <div class="review__content">
-                            <h3 class="review__title">Очень понравился тур на остров обезьян.</h3>
-                            <div class="review__content-text">
-                                <p>
-                                    Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия. 
-                                </p>
-                            </div>
-                            <time class="review__date">Ноябрь 2019</time>
-                        </div>
-                    </li>
-                    <li class="reviews__item review">
-                        <div class="review__header">
-                            <div class="review__photo">
-                                <div class="avatar">
                                     <img src="./air_asia/img_reviews/Lisa.png" alt="user" class="avar__img">
                                 </div>
                             </div>
-                            <div class="review__userdata"></div>
-                            <a href="#" class="review__user">Лиза Сидорова</a>
-                            <ul class="review__tags">
-                                <li class="review__tag-item tag">Тур по Тайланду</li>
-                            </ul>
+                            <div class="review__userdata">
+                                <a href="#" class="review__user">Лиза Сидорова</a>
+                                <ul class="review__tags">
+                                    <li class="review__tag-item tag tag--bg--green">Тур по Тайланду</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="review__content">
                             <h3 class="review__title">Интерестный тур по Таю.</h3>
@@ -125,14 +105,39 @@
                         <div class="review__header">
                             <div class="review__photo">
                                 <div class="avatar">
+                                    <img src="./air_asia/img_reviews/Ekaterina.png" alt="user" class="avar__img">
+                                </div>
+                            </div>
+                            <div class="review__userdata">
+                                <a href="#" class="review__user">Екатерина Жмых</a>
+                                <ul class="review__tags">
+                                    <li class="review__tag-item tag tag--bg--green">Тур на Остров обезьян</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="review__content">
+                            <h3 class="review__title review__title--second--column">Очень понравился тур на остров обезьян.</h3>
+                            <div class="review__content-text">
+                                <p>
+                                    Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст более привлекательным и живым для визуально-слухового восприятия. 
+                                </p>
+                            </div>
+                            <time class="review__date">Ноябрь 2019</time>
+                        </div>
+                    </li>
+                    <li class="reviews__item review">
+                        <div class="review__header">
+                            <div class="review__photo">
+                                <div class="avatar">
                                     <img src="./air_asia/img_reviews/Anton.png" alt="user" class="avar__img">
                                 </div>
                             </div>
-                            <div class="review__userdata"></div>
-                            <a href="#" class="review__user">Антон Игоревич</a>
-                            <ul class="review__tags">
-                                <li class="review__tag-item tag">Тур по Индонезии</li>
-                            </ul>
+                            <div class="review__userdata">
+                                <a href="#" class="review__user">Антон Игоревич</a>
+                                <ul class="review__tags">
+                                    <li class="review__tag-item tag tag--bg--green">Тур по Индонезии</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="review__content">
                             <h3 class="review__title">Для первого раза выбрал тур по Индонезии. И не пожалел!</h3>
@@ -159,13 +164,13 @@
                 </ul>
             </div>
         </main>
-
         <section class="separator">
             <div class="container">
                 <div class="separator__content">
-                    <div class="separator__title">
-                        <h2>Подберем турпо вашим пожеланиям</h2>
-                    </div>
+                    <h2 class="separator__title">
+                        Подберем тур по вашим пожеланиям
+                    </h2>
+                    <img src="./air_asia/img_reviews/couple.png " alt="couple" class="content__img">
                 </div>
             </div>
         </section>
@@ -186,9 +191,52 @@
                         <div class="form__controls-title">Какими услугами компании пользуетесь?</div>
                         <ul class="controls">
                             <li class="controls__item">
-                                
+                                <label class="controls__elem">
+                                    <input type="checkbox" class="controls__checkbox">
+                                    <div class="tag controls__tag">Остров обезьян</div>
+                                </label>
+                            </li>
+                            <li class="controls__item">
+                                <label class="controls__elem">
+                                    <input type="checkbox" class="controls__checkbox">
+                                    <div class="tag controls__tag">Тур по Таиланду</div>
+                                </label>
+                            </li>
+                            <li class="controls__item">
+                                <label class="controls__elem">
+                                    <input type="checkbox" class="controls__checkbox">
+                                    <div class="tag controls__tag">Водопад Янг-бей</div>
+                                </label>
+                            </li>
+                            <li class="controls__item">
+                                <label class="controls__elem">
+                                    <input type="checkbox" class="controls__checkbox">
+                                    <div class="tag controls__tag">Тур по Индонезии</div>
+                                </label>
+                            </li>
+                            <li class="controls__item">
+                                <label class="controls__elem">
+                                    <input type="checkbox" class="controls__checkbox">
+                                    <div class="tag ontrols__tag">Никакими</div>
+                                </label>
+                            </li>
+                            <li class="controls__item">
+                                <label class="controls__elem">
+                                    <input type="checkbox" class="controls__checkbox">
+                                    <div class="tag controls__tag">Тур по Бали</div>
+                                </label>
+                            </li>
+                            <li class="controls__item">
+                                <label class="controls__elem">
+                                    <input type="checkbox" class="controls__checkbox">
+                                    <div class="tag controls__tag">Другое</div>
+                                </label>
                             </li>
                         </ul>
+                    </div>
+                    <div class="form__btns">
+                        <button type="reset" class="button form__button button--color--gray">Очистить</button>
+                        <button type="submit" class="button form__button button--color--gray">Отправить</button>
                     </div>
                 </form>
             </div>
